--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </nav>
 
   <main>
-    <!-- Home -->
+    <!-- HOME -->
     <section class="tab-content home" style="display:block;">
       <div class="card-grid">
         <div class="card green">
@@ -79,25 +79,56 @@
       </div>
     </section>
 
-    <!-- Track -->
+    <!-- TRACK -->
     <section class="tab-content" style="display:none;">
       <div class="hero">
         <h2>📊 Onchain Tracker</h2>
         <p class="subtitle">Follow your Activity OnChain - Live!</p>
       </div>
       <div class="card-grid">
-        <!-- Card data... (samma som tidigare) -->
+        <div class="card blue">
+          <h3>Latest Activity</h3>
+          <p>Ex Bought Token on Zora</p>
+          <small>+ $5.23 Win</small>
+        </div>
+        <div class="card dark">
+          <h3>Gas Spent</h3>
+          <p>0.14 ETH (~$42)</p>
+        </div>
+        <div class="card dark">
+          <h3>Tokens Minted</h3>
+          <p>23 st</p>
+        </div>
+        <div class="card dark">
+          <h3>Trades: Win/Loss</h3>
+          <p>17 / 6</p>
+        </div>
+        <div class="card dark">
+          <h3>ETH Moved</h3>
+          <p>1.65 ETH total</p>
+        </div>
+        <div class="card dark">
+          <h3>Connected dApps</h3>
+          <ul>
+            <li>Zora</li>
+            <li>OpenSea</li>
+            <li>Base</li>
+          </ul>
+        </div>
+        <div class="card full">
+          <h3>💡 Smart Insights</h3>
+          <p>You’ve spent 23% less gas than average.</p>
+        </div>
       </div>
     </section>
 
-    <!-- Rewards -->
+    <!-- REWARDS -->
     <section class="tab-content" style="display:none;">
       <div class="hero">
         <h2>🎁 Rewards & XP</h2>
         <p class="subtitle">Boost your journey and earn daily perks</p>
       </div>
       <div class="card-grid">
-        <!-- Cards... -->
         <div class="card full earn">
           <h3>🚀 Earn More WAI</h3>
           <p>Share the app and invite friends to earn WarpAi Tokens.</p>
@@ -108,9 +139,9 @@
         <div class="card full premium">
           <h3>💎 Premium Perks</h3>
           <ul>
-            <li>Track more wallets</li>
-            <li>Priority support</li>
-            <li>Early access features</li>
+            <li>⭐ Track more wallets</li>
+            <li>⭐ Priority support</li>
+            <li>⭐ Early access features</li>
           </ul>
         </div>
         <div class="card full premium highlighted-premium">
@@ -126,7 +157,7 @@
         </div>
       </div>
 
-      <!-- Info Modal Trigger + Modal -->
+      <!-- Info Modal -->
       <button class="info-btn" onclick="toggleHowToEarn()">❓</button>
       <div id="earnExplanation" class="modal hidden">
         <div class="modal-content">
@@ -144,67 +175,82 @@
     </section>
 
     <!-- LEADERBOARD -->
-<section class="tab-content" style="display:none;">
-  <div class="hero">
-    <h2>🏆 Leaderboard</h2>
-    <p class="subtitle">Top users ranked by XP</p>
-  </div>
-  <div class="card full">
-    <ol class="leaderboard">
-      <li><span>👑 0xAlpha123</span><strong>142 XP</strong></li>
-      <li><span>0xZoraMint</span><strong>127 XP</strong></li>
-      <li><span>0xGweiGod</span><strong>121 XP</strong></li>
-      <li><span>0xTokenSniper</span><strong>114 XP</strong></li>
-      <li><span>0xMintMaster</span><strong>108 XP</strong></li>
-      <li><span>0xWarped</span><strong>101 XP</strong></li>
-      <li><span>0xEtherWolf</span><strong>99 XP</strong></li>
-      <li><span>0xBaseChad</span><strong>95 XP</strong></li>
-      <li><span>0xXPGrindr</span><strong>92 XP</strong></li>
-      <li><span>0xYou 👈</span><strong>87 XP</strong></li>
-    </ol>
-  </div>
-</section>
+    <section class="tab-content" style="display:none;">
+      <div class="hero">
+        <h2>🏆 Leaderboard</h2>
+        <p class="subtitle">Top users ranked by XP</p>
+      </div>
+      <div class="card full">
+        <ol class="leaderboard">
+          <li><span>👑 0xAlpha123</span><strong>142 XP</strong></li>
+          <li><span>0xZoraMint</span><strong>127 XP</strong></li>
+          <li><span>0xGweiGod</span><strong>121 XP</strong></li>
+          <li><span>0xTokenSniper</span><strong>114 XP</strong></li>
+          <li><span>0xMintMaster</span><strong>108 XP</strong></li>
+          <li><span>0xWarped</span><strong>101 XP</strong></li>
+          <li><span>0xEtherWolf</span><strong>99 XP</strong></li>
+          <li><span>0xBaseChad</span><strong>95 XP</strong></li>
+          <li><span>0xXPGrindr</span><strong>92 XP</strong></li>
+          <li><span>0xYou 👈</span><strong>87 XP</strong></li>
+        </ol>
+      </div>
+    </section>
 
-<!-- PROFILE -->
-<section class="tab-content" style="display:none;">
-  <div class="hero">
-    <h2>👤 My Profile</h2>
-    <p class="subtitle">Account overview & referral bonuses</p>
-  </div>
-  <div class="card-grid">
-    <div class="card dark">
-      <h3>Wallet</h3>
-      <p>0x1234...ABCD</p>
-      <p>Total XP: <strong>87</strong></p>
+    <!-- PROFILE -->
+    <section class="tab-content" style="display:none;">
+      <div class="hero">
+        <h2>👤 My Profile</h2>
+        <p class="subtitle">Account overview & referral bonuses</p>
+      </div>
+      <div class="card-grid">
+        <div class="card dark">
+          <h3>Wallet</h3>
+          <p>0x1234...ABCD</p>
+          <p>Total XP: <strong>87</strong></p>
+        </div>
+        <div class="card dark">
+          <h3>WarpAi Token</h3>
+          <p>Balance: 342.50 WAI</p>
+          <p>Level Bonus: 10%</p>
+        </div>
+        <div class="card dark">
+          <h3>Claim Token</h3>
+          <p>Reward: 5 WAI</p>
+          <button>Claim</button>
+        </div>
+        <div class="card dark">
+          <h3>Share Link</h3>
+          <p>Earn 5 WAI per share</p>
+          <button onclick="shareOnFarcaster()">Share on Farcaster</button>
+          <button onclick="shareOnX()">Share on X</button>
+        </div>
+        <div class="card full premium">
+          <h3>📦 Claim History</h3>
+          <ul>
+            <li>+5 WAI – shared on X</li>
+            <li>+5 WAI – referred friend</li>
+            <li>+10 WAI – weekly login</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ Modal -->
+    <button class="faq-btn" onclick="toggleFAQ()">❓</button>
+    <div id="faqModal" class="modal hidden">
+      <div class="modal-content">
+        <h3>❓ How WarpAi Works</h3>
+        <ul>
+          <li><strong>XP:</strong> Earned daily + via invites and actions</li>
+          <li><strong>WAI Tokens:</strong> Rewards that can be claimed</li>
+          <li><strong>Premium:</strong> Unlock extra tools + 2x XP</li>
+          <li><strong>Share:</strong> Boost XP by sharing on X/Farcaster</li>
+        </ul>
+        <button onclick="toggleFAQ()">Close</button>
+      </div>
     </div>
-    <div class="card dark">
-      <h3>WarpAi Token</h3>
-      <p>Balance: 342.50 WAI</p>
-      <p>Level Bonus: 10%</p>
-    </div>
-    <div class="card dark">
-      <h3>Claim Token</h3>
-      <p>Reward: 5 WAI</p>
-      <button>Claim</button>
-    </div>
-    <div class="card dark">
-      <h3>Share Link</h3>
-      <p>Earn 5 WAI per share</p>
-      <button onclick="shareOnFarcaster()">Share on Farcaster</button>
-      <button onclick="shareOnX()">Share on X</button>
-    </div>
-    <div class="card full premium">
-      <h3>📦 Claim History</h3>
-      <ul>
-        <li>+5 WAI – shared on X</li>
-        <li>+5 WAI – referred friend</li>
-        <li>+10 WAI – weekly login</li>
-      </ul>
-    </div>
-  </div>
-</section>
-<!-- SLUT PÅ MAIN -->
   </main>
+
   <script src="app.js"></script>
 </body>
 </html>
