--- a/index.html
+++ b/index.html
@@ -157,20 +157,25 @@
         </div>
       </div>
 
-      <!-- Info Modal -->
-      <button class="info-btn" onclick="toggleHowToEarn()">❓</button>
-      <div id="earnExplanation" class="modal hidden">
-        <div class="modal-content">
-          <h3>✨ Earn WarpAi XP</h3>
-          <ul>
-            <li>Invite a friend: <strong>+15 XP</strong></li>
-            <li>Daily login: <strong>+10 XP</strong></li>
-            <li>Claim Token: <strong>+5 WAI</strong></li>
-            <li>Share: <strong>+5 WAI</strong></li>
-            <li>Buy Token: <strong>+20 XP</strong></li>
-          </ul>
-          <button onclick="toggleHowToEarn()">Got it!</button>
-        </div>
+      <!-- Info Modal Trigger -->
+<div class="card full help-btn-wrapper">
+  <button class="info-btn" onclick="toggleHowToEarn()">❓ How to Earn XP</button>
+</div>
+
+<!-- Info Modal -->
+<div id="earnExplanation" class="modal hidden">
+  <div class="modal-content">
+    <h3>✨ Earn WarpAi XP</h3>
+    <ul>
+      <li>Invite a friend: <strong>+15 XP</strong></li>
+      <li>Daily login: <strong>+10 XP</strong></li>
+      <li>Claim Token: <strong>+5 WAI</strong></li>
+      <li>Share: <strong>+5 WAI</strong></li>
+      <li>Buy Token: <strong>+20 XP</strong></li>
+    </ul>
+    <button onclick="toggleHowToEarn()">Got it!</button>
+  </div>
+</div>
       </div>
     </section>
 
