--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
   <main>
     <!-- HOME -->
     <section class="tab-content home" style="display:block;">
-      <div class="card-grid">
+      <div class="faq-top-right">
+  <button class="info-btn" onclick="toggleFAQ()">❓</button>
+</div>
+    <div class="card-grid">
         <div class="card green">
           <h3>Claim XP</h3>
           <p>Daily XP bonus</p>
