--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           <h3>🔥 87 XP</h3>
           <p>5-day streak</p>
         </div>
+        <div class="card full help-btn-wrapper">
+  <button class="info-btn green-btn" onclick="toggleHowToEarn()">❓ How to Earn XP</button>
+</div>
         <div class="card purple">
           <h3>💎 Premium Tools</h3>
           <div class="btn-row">
