--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@
           <p>Pre-launch $WARP</p>
           <button>Buy Now</button>
         </div>
-        <div class="card">
-          <h3>🔥 87 XP</h3>
-          <p>5-day streak</p>
-        </div>
+        <div class="card dark">
+  <div class="help-btn-wrapper">
+    <button class="info-btn green-btn" onclick="toggleHowToEarn()">❓ How to Earn XP</button>
+  </div>
+  <h3>🔥 87 XP</h3>
+  <p>5-day streak</p>
+</div>
         <div class="card full help-btn-wrapper">
   <button class="info-btn green-btn" onclick="toggleHowToEarn()">❓ How to Earn XP</button>
 </div>
