--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
         <div class="card dark">
   <div class="help-btn-wrapper">
     <button class="info-btn green-btn" onclick="toggleHowToEarn()">❓ How to Earn XP</button>
-  </div>
-  <h3>🔥 87 XP</h3>
+  <div class="card dark position-relative">
+  <h3>🔥 87 XP
+    <button class="mini-info-btn" onclick="toggleXpInfo()">❓</button>
+  </h3>
   <p>5-day streak</p>
 </div>
         <div class="card full help-btn-wrapper">
