--- a/index.html
+++ b/index.html
@@ -264,6 +264,18 @@
         <button onclick="toggleFAQ()">Close</button>
       </div>
     </div>
+    <div id="xpInfoModal" class="modal hidden">
+  <div class="modal-content">
+    <h3>❓ About XP & WAI</h3>
+    <ul>
+      <li><strong>XP:</strong> Earned daily via login, invites, and actions.</li>
+      <li><strong>Streak Bonus:</strong> Claim daily to build your streak.</li>
+      <li><strong>WarpAi Token (WAI):</strong> Rewarded for shares and invites.</li>
+      <li><strong>Premium:</strong> Track wallets, get full analytics & 2x XP.</li>
+    </ul>
+    <button onclick="toggleXpInfo()">Got it!</button>
+  </div>
+</div>
   </main>
 
   <script src="app.js"></script>
