--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <!-- HOME -->
     <section class="tab-content home" style="display:block;">
       <div class="faq-top-right">
-  <button class="info-btn" onclick="toggleFAQ()">❓</button>
-</div>
-    <div class="card-grid">
+        <button class="info-btn" onclick="toggleFAQ()">❓</button>
+      </div>
+      <div class="card-grid">
         <div class="card green">
           <h3>Claim XP</h3>
           <p>Daily XP bonus</p>
@@ -61,17 +61,11 @@
           <button>Buy Now</button>
         </div>
         <div class="card dark">
-  <div class="help-btn-wrapper">
-    <button class="info-btn green-btn" onclick="toggleHowToEarn()">❓ How to Earn XP</button>
-  <div class="card dark position-relative">
-  <h3>🔥 87 XP
-    <button class="mini-info-btn" onclick="toggleXpInfo()">❓</button>
-  </h3>
-  <p>5-day streak</p>
-</div>
-        <div class="card full help-btn-wrapper">
-  <button class="info-btn green-btn" onclick="toggleHowToEarn()">❓ How to Earn XP</button>
-</div>
+          <h3>🔥 87 XP
+            <button class="mini-info-btn" onclick="toggleXpInfo()">❓</button>
+          </h3>
+          <p>5-day streak</p>
+        </div>
         <div class="card purple">
           <h3>💎 Premium Tools</h3>
           <div class="btn-row">
@@ -167,26 +161,6 @@
           <button class="upgrade-button-green">Upgrade</button>
         </div>
       </div>
-
-      <!-- Info Modal Trigger -->
-      <div class="card full help-btn-wrapper">
-        <button class="info-btn" onclick="toggleHowToEarn()">❓ How to Earn XP</button>
-      </div>
-
-      <!-- Info Modal -->
-      <div id="earnExplanation" class="modal hidden">
-        <div class="modal-content">
-          <h3>✨ Earn WarpAi XP</h3>
-          <ul>
-            <li>Invite a friend: <strong>+15 XP</strong></li>
-            <li>Daily login: <strong>+10 XP</strong></li>
-            <li>Claim Token: <strong>+5 WAI</strong></li>
-            <li>Share: <strong>+5 WAI</strong></li>
-            <li>Buy Token: <strong>+20 XP</strong></li>
-          </ul>
-          <button onclick="toggleHowToEarn()">Got it!</button>
-        </div>
-      </div>
     </section>
 
     <!-- LEADERBOARD -->
@@ -250,32 +224,31 @@
       </div>
     </section>
 
-    <!-- FAQ Modal -->
-
+    <!-- MODALS -->
     <div id="faqModal" class="modal hidden">
       <div class="modal-content">
         <h3>❓ How WarpAi Works</h3>
         <ul>
-          <li><strong>XP:</strong> Earned daily + via invites and actions</li>
-          <li><strong>WAI Tokens:</strong> Rewards that can be claimed</li>
-          <li><strong>Premium:</strong> Unlock extra tools + 2x XP</li>
-          <li><strong>Share:</strong> Boost XP by sharing on X/Farcaster</li>
+          <li><strong>XP:</strong> Earned daily via login, invites, and actions.</li>
+          <li><strong>WAI Tokens:</strong> Earned through shares and claims.</li>
+          <li><strong>Premium:</strong> Unlock extra tools and 2x XP.</li>
         </ul>
         <button onclick="toggleFAQ()">Close</button>
       </div>
     </div>
+
     <div id="xpInfoModal" class="modal hidden">
-  <div class="modal-content">
-    <h3>❓ About XP & WAI</h3>
-    <ul>
-      <li><strong>XP:</strong> Earned daily via login, invites, and actions.</li>
-      <li><strong>Streak Bonus:</strong> Claim daily to build your streak.</li>
-      <li><strong>WarpAi Token (WAI):</strong> Rewarded for shares and invites.</li>
-      <li><strong>Premium:</strong> Track wallets, get full analytics & 2x XP.</li>
-    </ul>
-    <button onclick="toggleXpInfo()">Got it!</button>
-  </div>
-</div>
+      <div class="modal-content">
+        <h3>❓ About XP & WAI</h3>
+        <ul>
+          <li><strong>XP:</strong> Earned daily via login, invites, and actions.</li>
+          <li><strong>Streak Bonus:</strong> Keep your login streak alive.</li>
+          <li><strong>WAI:</strong> Token rewarded for activity & sharing.</li>
+          <li><strong>Premium:</strong> Track wallets, get analytics & more.</li>
+        </ul>
+        <button onclick="toggleXpInfo()">Got it!</button>
+      </div>
+    </div>
   </main>
 
   <script src="app.js"></script>
