--- a/index.html
+++ b/index.html
@@ -117,11 +117,16 @@
             <li>OpenSea</li>
             <li>Base</li>
           </ul>
-        </div>
-        <div class="card full">
-          <h3>💡 Smart Insights</h3>
-          <p>You’ve spent 23% less gas than average.</p>
-        </div>
+        <!-- NFT Mint History -->
+<div class="card full dark">
+  <h3>🎨 NFT Mint History</h3>
+  <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
+    <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
+    <li><strong>MintQuest #7</strong> – Free – Base</li>
+    <li><strong>OnchainSticker</strong> – 0.004 ETH – Optimism</li>
+  </ul>
+  <button style="margin-top:0.5rem;">View Full History</button>
+</div>
       </div>
     </section>
 
