--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
           <h3>ETH Moved</h3>
           <p>1.65 ETH total</p>
         </div>
+        <div class="card dark full">
+  <h3>⛽️ Gas Analyzer</h3>
+  <p>Total Gas Used: <strong>0.43 ETH</strong></p>
+  <p>Compared to avg: <span style="color:#4caf50;">−17%</span> less</p>
+</div>
         <div class="card dark">
           <h3>Connected dApps</h3>
           <ul>
