--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
           <h3>Tokens Minted</h3>
           <p>23 st</p>
         </div>
+        <div class="card full dark">
+  <h3>🔔 Custom Alerts</h3>
+  <p>You’ll be notified when:</p>
+  <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
+    <li>→ New contract interaction detected</li>
+    <li>→ New dApp connected</li>
+    <li>→ Large transaction over 0.5 ETH</li>
+    <li>→ New NFT minted</li>
+  </ul>
+  <button style="margin-top:0.5rem;">Manage Alerts</button>
+</div>
         <div class="card dark">
           <h3>Trades: Win/Loss</h3>
           <p>17 / 6</p>
