--- a/index.html
+++ b/index.html
@@ -81,70 +81,72 @@
       </div>
     </section>
 
-    <!-- TRACK -->
-    <section class="tab-content" style="display:none;">
-      <div class="hero">
-        <h2>📊 Onchain Tracker</h2>
-        <p class="subtitle">Follow your Activity OnChain - Live!</p>
-      </div>
-      <div class="card-grid">
-        <div class="card blue">
-          <h3>Latest Activity</h3>
-          <p>Ex Bought Token on Zora</p>
-          <small>+ $5.23 Win</small>
-        </div>
-        <div class="card dark">
-          <h3>Gas Spent</h3>
-          <p>0.14 ETH (~$42)</p>
-        </div>
-        <div class="card dark">
-          <h3>Tokens Minted</h3>
-          <p>23 st</p>
-        </div>
-        <div class="card full dark">
-  <h3>🔔 Custom Alerts</h3>
-  <p>You’ll be notified when:</p>
-  <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
-    <li>→ New contract interaction detected</li>
-    <li>→ New dApp connected</li>
-    <li>→ Large transaction over 0.5 ETH</li>
-    <li>→ New NFT minted</li>
-  </ul>
-  <button style="margin-top:0.5rem;">Manage Alerts</button>
-</div>
-        <div class="card dark">
-          <h3>Trades: Win/Loss</h3>
-          <p>17 / 6</p>
-        </div>
-        <div class="card dark">
-          <h3>ETH Moved</h3>
-          <p>1.65 ETH total</p>
-        </div>
-        <div class="card dark full">
-  <h3>⛽️ Gas Analyzer</h3>
-  <p>Total Gas Used: <strong>0.43 ETH</strong></p>
-  <p>Compared to avg: <span style="color:#4caf50;">−17%</span> less</p>
-</div>
-        <div class="card dark">
-          <h3>Connected dApps</h3>
-          <ul>
-            <li>Zora</li>
-            <li>OpenSea</li>
-            <li>Base</li>
-          </ul>
-        </div>
-        <!-- NFT Mint History -->
-        <div class="card full dark">
-          <h3>🎨 NFT Mint History</h3>
-          <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
-            <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
-            <li><strong>MintQuest #7</strong> – Free – Base</li>
-            <li><strong>OnchainSticker</strong> – 0.004 ETH – Optimism</li>
-          </ul>
-          <button style="margin-top:0.5rem;">View Full History</button>
-        </div>
-      </div>
-    </section>
+    <!-- TRACK SECTION START -->
+<section class='tab-content' style='display:none;'>
+  <div class='hero'>
+    <h2>📊 Onchain Tracker</h2>
+    <p class='subtitle'>Follow your Activity OnChain - Live!</p>
+  </div>
+  <div class='card-grid'>
+    <div class='card blue'>
+      <h3>Latest Activity</h3>
+      <p>Ex Bought Token on Zora</p>
+      <small>+ $5.23 Win</small>
+    </div>
+    <div class='card dark'>
+      <h3>Gas Spent</h3>
+      <p>0.14 ETH (~$42)</p>
+    </div>
+    <div class='card dark'>
+      <h3>Tokens Minted</h3>
+      <p>23 st</p>
+    </div>
+    <div class='card full dark'>
+      <h3>🔔 Custom Alerts</h3>
+      <p>You’ll be notified when:</p>
+      <ul style='text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;'>
+        <li>→ New contract interaction (your wallet)</li>
+        <li>→ New dApp connected (base alerts)</li>
+        <li>→ Transaction over 0.5 ETH</li>
+        <li>→ NFT minted or transferred</li>
+        <li><em>+ Premium: Alerts from ANY wallet</em></li>
+      </ul>
+      <button style='margin-top:0.5rem;'>Manage Alerts</button>
+    </div>
+    <div class='card dark'>
+      <h3>Trades: Win/Loss</h3>
+      <p>17 / 6</p>
+    </div>
+    <div class='card dark'>
+      <h3>ETH Moved</h3>
+      <p>1.65 ETH total</p>
+    </div>
+    <div class='card full dark'>
+      <h3>⛽️ Gas Analyzer</h3>
+      <p>Total Gas Used: <strong>0.43 ETH</strong></p>
+      <p>Compared to avg: <span style='color:#4caf50;'>−17%</span> less</p>
+      <p><em>Premium: View historical gas across all wallets</em></p>
+    </div>
+    <div class='card dark'>
+      <h3>Connected dApps</h3>
+      <ul>
+        <li>Zora</li>
+        <li>OpenSea</li>
+        <li>Base</li>
+      </ul>
+    </div>
+    <div class='card full dark'>
+      <h3>🎨 NFT Mint History</h3>
+      <ul style='text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;'>
+        <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
+        <li><strong>MintQuest #7</strong> – Free – Base</li>
+        <li><strong>OnchainSticker</strong> – 0.004 ETH – Optimism</li>
+      </ul>
+      <button style='margin-top:0.5rem;'>View Full History</button>
+    </div>
+  </div>
+</section>
+<!-- TRACK SECTION END -->
 
     <!-- REWARDS -->
     <section class="tab-content" style="display:none;">
