--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <!-- TRACK -->
 <section class="tab-content" style="display:none;">
   <div class="hero">
-    <h2>📊 Onchain Tracker</h2>
-    <p class="subtitle">Follow your Activity OnChain - Live!</p>
+    <h2>📈 Onchain Tracker</h2>
+    <p class="subtitle">Track your own wallet activity</p>
   </div>
   <div class="card-grid">
 
@@ -96,60 +96,37 @@
     </div>
 
     <div class="card dark">
-      <h3>Gas Spent</h3>
-      <p>0.14 ETH (~$42)</p>
-    </div>
-
-    <div class="card dark">
-      <h3>Minted</h3>
-      <p>23 tokens</p>
-    </div>
-
-    <div class="card dark">
-      <h3>Win/Loss</h3>
-      <p>17 / 6</p>
+      <h3>Tokens Minted</h3>
+      <p>23 st</p>
     </div>
 
     <div class="card dark">
       <h3>ETH Moved</h3>
-      <p>1.65 ETH</p>
+      <p>1.65 ETH total</p>
     </div>
 
     <div class="card dark">
-      <h3>dApps</h3>
-      <ul style="padding-left: 1rem; font-size: 0.7rem; text-align: left;">
-        <li>Zora</li>
-        <li>OpenSea</li>
-        <li>Base</li>
-      </ul>
+      <h3>Gas Spent</h3>
+      <p>0.14 ETH (~$42)</p>
     </div>
 
     <div class="card full dark">
-      <h3>🎨 NFT Mints</h3>
-      <ul style="padding-left: 1rem; font-size: 0.75rem; line-height: 1.5; text-align: left;">
+      <h3>🎨 NFT Mint History</h3>
+      <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
         <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
         <li><strong>MintQuest #7</strong> – Free – Base</li>
         <li><strong>OnchainSticker</strong> – 0.004 ETH – Optimism</li>
       </ul>
-      <button style="margin-top:0.4rem;">View All</button>
+      <button style="margin-top:0.5rem;">View Full History</button>
     </div>
 
-    <div class="card full dark">
-      <h3>🔔 Custom Alerts</h3>
-      <p style="font-size:0.75rem;">You'll be notified when:</p>
-      <ul style="padding-left: 1rem; font-size: 0.7rem; line-height: 1.5; text-align: left;">
-        <li>→ New contract interaction</li>
-        <li>→ New dApp connected</li>
-        <li>→ Big tx over 0.5 ETH</li>
-        <li>→ New NFT minted</li>
+    <div class="card dark">
+      <h3>Connected dApps</h3>
+      <ul>
+        <li>Zora</li>
+        <li>OpenSea</li>
+        <li>Base</li>
       </ul>
-      <button class="info-btn green" style="margin-top: 0.5rem;">Manage Alerts</button>
-    </div>
-
-    <div class="card full dark">
-      <h3>⛽️ Gas Analyzer</h3>
-      <p>Total Used: <strong>0.43 ETH</strong></p>
-      <p style="font-size: 0.75rem;">Compared to avg: <span style="color:#4caf50;">−17%</span></p>
     </div>
 
   </div>
