--- a/index.html
+++ b/index.html
@@ -168,28 +168,53 @@
       </div>
     </section>
 
-    <!-- LEADERBOARD -->
-    <section class="tab-content" style="display:none;">
-      <div class="hero">
-        <h2>🏆 Leaderboard</h2>
-        <p class="subtitle">Top users ranked by XP</p>
-      </div>
-      <div class="card full">
-        <ol class="leaderboard">
-          <li><span>👑 0xAlpha123</span><strong>142 XP</strong></li>
-          <li><span>0xZoraMint</span><strong>127 XP</strong></li>
-          <li><span>0xGweiGod</span><strong>121 XP</strong></li>
-          <li><span>0xTokenSniper</span><strong>114 XP</strong></li>
-          <li><span>0xMintMaster</span><strong>108 XP</strong></li>
-          <li><span>0xWarped</span><strong>101 XP</strong></li>
-          <li><span>0xEtherWolf</span><strong>99 XP</strong></li>
-          <li><span>0xBaseChad</span><strong>95 XP</strong></li>
-          <li><span>0xXPGrindr</span><strong>92 XP</strong></li>
-          <li><span>0xYou 👈</span><strong>87 XP</strong></li>
-        </ol>
-      </div>
-    </section>
+    <!-- PREMIUM (ersätter Leaderboard) -->
+<section class="tab-content" style="display:none;">
+  <div class="hero">
+    <h2>💎 Premium Tools</h2>
+    <p class="subtitle">Upgrade to unlock full features</p>
+  </div>
 
+  <div class="card-grid">
+
+    <div class="card dark locked-card">
+      <h3>Wallet Tracker</h3>
+      <p>Track any public address</p>
+      <button class="unlock-button">Unlock</button>
+    </div>
+
+    <div class="card dark locked-card">
+      <h3>Multi-Wallet Support</h3>
+      <p>Claim & manage more wallets</p>
+      <button class="unlock-button">Unlock</button>
+    </div>
+
+    <div class="card dark locked-card">
+      <h3>Full Analytics</h3>
+      <p>Win/Loss, gas, performance over time</p>
+      <button class="unlock-button">Unlock</button>
+    </div>
+
+    <div class="card dark locked-card">
+      <h3>Advanced Alerts</h3>
+      <p>Set alerts for any wallet</p>
+      <button class="unlock-button">Unlock</button>
+    </div>
+
+    <div class="card full highlighted-premium">
+      <h3>🔓 Unlock Premium Access</h3>
+      <p>One-time $5 to unlock everything:</p>
+      <ul>
+        <li>🧠 Track any wallet</li>
+        <li>📊 View advanced analytics</li>
+        <li>⛽️ Analyze gas across dApps</li>
+        <li>📦 Get full claim history & reports</li>
+      </ul>
+      <button class="upgrade-button-green">Upgrade Now</button>
+    </div>
+
+  </div>
+</section>
     <!-- PROFILE -->
     <section class="tab-content" style="display:none;">
       <div class="hero">
