--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button class="tab-button active">🏠 Home</button>
     <button class="tab-button">📈 Track</button>
     <button class="tab-button">🎁 Rewards</button>
-    <button class="tab-button">🏆 Leaderboard</button>
+    <button class="tab-button">💎 Premium</button>
     <button class="tab-button">👤 Profile</button>
   </nav>
 
