--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </div>
     </section>
 
-    <!-- PREMIUM (ersätter Leaderboard) -->
+    <!-- PREMIUM -->
 <section class="tab-content" style="display:none;">
   <div class="hero">
     <h2>💎 Premium Tools</h2>
@@ -176,43 +176,38 @@
   </div>
 
   <div class="card-grid">
-
-    <div class="card dark locked-card">
+    <div class="card dark">
       <h3>Wallet Tracker</h3>
       <p>Track any public address</p>
-      <button class="unlock-button">Unlock</button>
+      <button class="info-btn green">Unlock</button>
     </div>
-
-    <div class="card dark locked-card">
+    <div class="card dark">
       <h3>Multi-Wallet Support</h3>
       <p>Claim & manage more wallets</p>
-      <button class="unlock-button">Unlock</button>
+      <button class="info-btn green">Unlock</button>
     </div>
-
-    <div class="card dark locked-card">
+    <div class="card dark">
       <h3>Full Analytics</h3>
       <p>Win/Loss, gas, performance over time</p>
-      <button class="unlock-button">Unlock</button>
+      <button class="info-btn green">Unlock</button>
     </div>
-
-    <div class="card dark locked-card">
+    <div class="card dark">
       <h3>Advanced Alerts</h3>
       <p>Set alerts for any wallet</p>
-      <button class="unlock-button">Unlock</button>
+      <button class="info-btn green">Unlock</button>
     </div>
 
-    <div class="card full highlighted-premium">
+    <div class="card full highlighted-premium" style="margin-top: 1rem;">
       <h3>🔓 Unlock Premium Access</h3>
       <p>One-time $5 to unlock everything:</p>
-      <ul>
+      <ul style="text-align:left; font-size:0.75rem; margin-bottom:1rem;">
         <li>🧠 Track any wallet</li>
         <li>📊 View advanced analytics</li>
-        <li>⛽️ Analyze gas across dApps</li>
+        <li>⛽ Analyze gas across dApps</li>
         <li>📦 Get full claim history & reports</li>
       </ul>
-      <button class="upgrade-button-green">Upgrade Now</button>
+      <button class="info-btn green">Upgrade Now</button>
     </div>
-
   </div>
 </section>
     <!-- PROFILE -->
