--- a/index.html
+++ b/index.html
@@ -168,45 +168,47 @@
       </div>
     </section>
 
-    <!-- PREMIUM -->
+    <!-- PREMIUM (tidigare Leaderboard) -->
 <section class="tab-content" style="display:none;">
   <div class="hero">
     <h2>💎 Premium Tools</h2>
     <p class="subtitle">Upgrade to unlock full features</p>
   </div>
-
   <div class="card-grid">
-    <div class="card dark">
+    <div class="card dark locked">
       <h3>Wallet Tracker</h3>
       <p>Track any public address</p>
-      <button class="info-btn green">Unlock</button>
-    </div>
-    <div class="card dark">
-      <h3>Multi-Wallet Support</h3>
-      <p>Claim & manage more wallets</p>
-      <button class="info-btn green">Unlock</button>
-    </div>
-    <div class="card dark">
-      <h3>Full Analytics</h3>
-      <p>Win/Loss, gas, performance over time</p>
-      <button class="info-btn green">Unlock</button>
-    </div>
-    <div class="card dark">
-      <h3>Advanced Alerts</h3>
-      <p>Set alerts for any wallet</p>
-      <button class="info-btn green">Unlock</button>
+      <button class="info-btn green unlock-btn">Unlock</button>
     </div>
 
-    <div class="card full highlighted-premium" style="margin-top: 1rem;">
+    <div class="card dark locked">
+      <h3>Multi-Wallet Support</h3>
+      <p>Claim & manage more wallets</p>
+      <button class="info-btn green unlock-btn">Unlock</button>
+    </div>
+
+    <div class="card dark locked">
+      <h3>Full Analytics</h3>
+      <p>Win/Loss, gas, performance over time</p>
+      <button class="info-btn green unlock-btn">Unlock</button>
+    </div>
+
+    <div class="card dark locked">
+      <h3>Advanced Alerts</h3>
+      <p>Set alerts for any wallet</p>
+      <button class="info-btn green unlock-btn">Unlock</button>
+    </div>
+
+    <div class="card full highlighted-premium">
       <h3>🔓 Unlock Premium Access</h3>
       <p>One-time $5 to unlock everything:</p>
-      <ul style="text-align:left; font-size:0.75rem; margin-bottom:1rem;">
+      <ul>
         <li>🧠 Track any wallet</li>
         <li>📊 View advanced analytics</li>
-        <li>⛽ Analyze gas across dApps</li>
+        <li>⛽️ Analyze gas across dApps</li>
         <li>📦 Get full claim history & reports</li>
       </ul>
-      <button class="info-btn green">Upgrade Now</button>
+      <button class="upgrade-button-green unlock-btn">Upgrade Now</button>
     </div>
   </div>
 </section>
