--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </div>
     </section>
 
-    <!-- PREMIUM (tidigare Leaderboard) -->
+    <!-- PREMIUM -->
 <section class="tab-content" style="display:none;">
   <div class="hero">
     <h2>💎 Premium Tools</h2>
@@ -176,27 +176,23 @@
   </div>
   <div class="card-grid">
     <div class="card dark locked">
-      <h3>Wallet Tracker</h3>
+      <h3>🔒 Wallet Tracker <span style="color:orange; font-size:0.75rem;">Premium</span></h3>
       <p>Track any public address</p>
-      <button class="info-btn green unlock-btn">Unlock</button>
     </div>
 
     <div class="card dark locked">
-      <h3>Multi-Wallet Support</h3>
+      <h3>🔒 Multi-Wallet Support <span style="color:orange; font-size:0.75rem;">Premium</span></h3>
       <p>Claim & manage more wallets</p>
-      <button class="info-btn green unlock-btn">Unlock</button>
     </div>
 
     <div class="card dark locked">
-      <h3>Full Analytics</h3>
+      <h3>🔒 Full Analytics <span style="color:orange; font-size:0.75rem;">Premium</span></h3>
       <p>Win/Loss, gas, performance over time</p>
-      <button class="info-btn green unlock-btn">Unlock</button>
     </div>
 
     <div class="card dark locked">
-      <h3>Advanced Alerts</h3>
+      <h3>🔒 Advanced Alerts <span style="color:orange; font-size:0.75rem;">Premium</span></h3>
       <p>Set alerts for any wallet</p>
-      <button class="info-btn green unlock-btn">Unlock</button>
     </div>
 
     <div class="card full highlighted-premium">
