--- a/index.html
+++ b/index.html
@@ -167,36 +167,32 @@
     <p class="subtitle">Upgrade to unlock full features</p>
   </div>
   <div class="card-grid">
-    <div class="card dark locked">
-      <h3>🔒 Wallet Tracker <span style="color:orange; font-size:0.75rem;">Premium</span></h3>
+    <div class="card dark">
+      <h3>🔒 Wallet Tracker<br><span style="color:orange;">Premium</span></h3>
       <p>Track any public address</p>
     </div>
-
-    <div class="card dark locked">
-      <h3>🔒 Multi-Wallet Support <span style="color:orange; font-size:0.75rem;">Premium</span></h3>
+    <div class="card dark">
+      <h3>🔒 Multi-Wallet Support<br><span style="color:orange;">Premium</span></h3>
       <p>Claim & manage more wallets</p>
     </div>
-
-    <div class="card dark locked">
-      <h3>🔒 Full Analytics <span style="color:orange; font-size:0.75rem;">Premium</span></h3>
+    <div class="card dark">
+      <h3>🔒 Full Analytics<br><span style="color:orange;">Premium</span></h3>
       <p>Win/Loss, gas, performance over time</p>
     </div>
-
-    <div class="card dark locked">
-      <h3>🔒 Advanced Alerts <span style="color:orange; font-size:0.75rem;">Premium</span></h3>
+    <div class="card dark">
+      <h3>🔒 Advanced Alerts<br><span style="color:orange;">Premium</span></h3>
       <p>Set alerts for any wallet</p>
     </div>
-
-    <div class="card full highlighted-premium">
+    <div class="card full highlighted-premium" style="margin-top: 1rem;">
       <h3>🔓 Unlock Premium Access</h3>
       <p>One-time $5 to unlock everything:</p>
       <ul>
         <li>🧠 Track any wallet</li>
         <li>📊 View advanced analytics</li>
-        <li>⛽️ Analyze gas across dApps</li>
+        <li>⛽ Analyze gas across dApps</li>
         <li>📦 Get full claim history & reports</li>
       </ul>
-      <button class="upgrade-button-green unlock-btn">Upgrade Now</button>
+      <button class="upgrade-button-green">Upgrade Now</button>
     </div>
   </div>
 </section>
