--- a/index.html
+++ b/index.html
@@ -82,48 +82,52 @@
     </section>
 
     <!-- TRACK -->
-    <section class="tab-content" style="display:none;">
-      <div class="hero">
-        <h2>📈 Onchain Tracker</h2>
-        <p class="subtitle">Track your own wallet activity</p>
-      </div>
-      <div class="card-grid">
-        <div class="card blue">
-          <h3>Latest Activity</h3>
-          <p>Ex Bought Token on Zora</p>
-          <small>+ $5.23 Win</small>
-        </div>
-        <div class="card dark">
-          <h3>Tokens Minted</h3>
-          <p>23 st</p>
-        </div>
-        <div class="card dark">
-          <h3>ETH Moved</h3>
-          <p>1.65 ETH total</p>
-        </div>
-        <div class="card dark">
-          <h3>Gas Spent</h3>
-          <p>0.14 ETH (~$42)</p>
-        </div>
-        <div class="card dark">
-          <h3>Connected dApps</h3>
-          <ul>
-            <li>Zora</li>
-            <li>OpenSea</li>
-            <li>Base</li>
-          </ul>
-        </div>
-        <div class="card full dark">
-          <h3>🎨 NFT Mint History</h3>
-          <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
-            <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
-            <li><strong>MintQuest #7</strong> – Free – Base</li>
-            <li><strong>OnchainSticker</strong> – 0.004 ETH – Optimism</li>
-          </ul>
-          <button style="margin-top:0.5rem;">View Full History</button>
-        </div>
-      </div>
-    </section>
+<section class="tab-content" style="display:none;">
+  <div class="hero compact-track-hero">
+    <h2 style="font-size: 1.2rem; margin-bottom: 0.3rem;">📊 Onchain Tracker</h2>
+  </div>
+  <div class="card-grid">
+    <div class="card blue">
+      <h3>Latest Activity</h3>
+      <p>Ex Bought Token on Zora</p>
+      <small>+ $5.23 Win</small>
+    </div>
+
+    <div class="card dark">
+      <h3>Tokens Minted</h3>
+      <p>23 st</p>
+    </div>
+
+    <div class="card dark">
+      <h3>ETH Moved</h3>
+      <p>1.65 ETH total</p>
+    </div>
+
+    <div class="card dark">
+      <h3>Gas Spent</h3>
+      <p>0.14 ETH (~$42)</p>
+    </div>
+
+    <div class="card dark">
+      <h3>Connected dApps</h3>
+      <ul>
+        <li>Zora</li>
+        <li>OpenSea</li>
+        <li>Base</li>
+      </ul>
+    </div>
+
+    <div class="card full dark">
+      <h3>🎨 NFT Mint History</h3>
+      <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
+        <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
+        <li><strong>MintQuest #7</strong> – Free – Base</li>
+        <li><strong>OnchainSticker</strong> – 0.004 ETH – Optimism</li>
+      </ul>
+      <button style="margin-top:0.5rem;">View Full History</button>
+    </div>
+  </div>
+</section>
 
     <!-- REWARDS -->
     <section class="tab-content" style="display:none;">
