--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
       <button style="margin-top:0.5rem;">View Full History</button>
     </div>
   </div>
+  <div class="card full dark">
+  <h3>🔍 Followed Wallets</h3>
+  <p style="font-size: 0.9rem;">See recent activity for wallets you follow</p>
+  <ul style="text-align: left; font-size: 0.75rem; padding-left: 1rem;">
+    <li><strong>0xFanArt.eth</strong> – Minted on Zora</li>
+    <li><strong>0xCollector42</strong> – Bought token on OpenSea</li>
+    <li><strong>0xAIHunter</strong> – Bridged 0.5 ETH to Base</li>
+  </ul>
+  <div style="margin-top: 0.5rem;">
+    <button disabled style="opacity:0.6;">Add Wallet (Premium)</button>
+  </div>
+</div>
 </section>
 
     <!-- REWARDS -->
