--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
 
     <!-- TRACK -->
 <section class="tab-content" style="display:none;">
-  <div class="hero compact-track-hero">
-    <h2 style="font-size: 1.2rem; margin-bottom: 0.3rem;">📊 Onchain Tracker</h2>
+  <div class="hero">
+    <h2 style="font-size:1.2rem;">📈 Onchain Tracker</h2>
+    <p class="subtitle">Track your own wallet activity</p>
   </div>
   <div class="card-grid">
+
     <div class="card blue">
       <h3>Latest Activity</h3>
       <p>Ex Bought Token on Zora</p>
@@ -126,19 +128,23 @@
       </ul>
       <button style="margin-top:0.5rem;">View Full History</button>
     </div>
+
+    <!-- Premium Followed Wallets -->
+    <div class="card full dark">
+      <h3>🔍 Followed Wallets <span style="color:orange;">(Premium)</span></h3>
+      <p style="font-size: 0.9rem;">See recent activity for wallets you follow</p>
+      <ul style="text-align: left; font-size: 0.75rem; padding-left: 1rem;">
+        <li><strong>0xFanArt.eth</strong> – Minted on Zora</li>
+        <li><strong>0xCollector42</strong> – Bought token on OpenSea</li>
+        <li><strong>0xAIHunter</strong> – Bridged 0.5 ETH to Base</li>
+      </ul>
+      <div style="margin-top: 0.5rem;">
+        <button disabled style="opacity:0.6; cursor: not-allowed;">➕ Add Wallet (Premium)</button>
+      </div>
+    </div>
+
   </div>
-  <div class="card full dark">
-  <h3>🔍 Followed Wallets</h3>
-  <p style="font-size: 0.9rem;">See recent activity for wallets you follow</p>
-  <ul style="text-align: left; font-size: 0.75rem; padding-left: 1rem;">
-    <li><strong>0xFanArt.eth</strong> – Minted on Zora</li>
-    <li><strong>0xCollector42</strong> – Bought token on OpenSea</li>
-    <li><strong>0xAIHunter</strong> – Bridged 0.5 ETH to Base</li>
-  </ul>
-  <div style="margin-top: 0.5rem;">
-    <button disabled style="opacity:0.6;">Add Wallet (Premium)</button>
-  </div>
-</div>
+</section>
 </section>
 
     <!-- REWARDS -->
