--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
           <button>Buy Now</button>
         </div>
         <div class="card dark">
-          <h3>🔥 87 XP
-            <button class="mini-info-btn" onclick="toggleXpInfo()">❓</button>
+          <h3>🔥 87 XP</h3>
+<p>5-day streak</p>
+<button class="info-btn green" onclick="toggleXpInfo()">[?] About XP & WAI</button>
           </h3>
           <p>5-day streak</p>
         </div>
