--- a/index.html
+++ b/index.html
@@ -44,43 +44,92 @@
   </nav>
 
   <main>
-    <!-- HOME -->
-    <section class="tab-content home" style="display:block;">
-      <div class="card-grid">
-        <div class="card green">
-          <h3>Claim XP</h3>
-          <p>Daily XP bonus</p>
-          <button>Claim</button>
-        </div>
-        <div class="card dark">
-          <h3>Buy Token</h3>
-          <p>Pre-launch $WARP</p>
-          <button>Buy Now</button>
-        </div>
-        <div class="card dark">
-          <h3>🔥 87 XP</h3>
-<p>5-day streak</p>
-<button class="info-btn green" onclick="toggleXpInfo()">[?] About XP & WAI</button>
-          </h3>
-          <p>5-day streak</p>
-        </div>
-        <div class="card purple">
-          <h3>💎 Premium Tools</h3>
-          <div class="btn-row">
-            <button>Claim another address</button>
-            <button>Track random wallet</button>
-          </div>
-        </div>
-        <div class="card full journey">
-          <h3>🎯 Your XP Journey</h3>
-          <p>Level 2 → Next Level: 100 XP</p>
-          <div class="xp-bar">
-            <div class="xp-fill" style="width: 87%;"></div>
-          </div>
-          <small>87 / 100 XP</small>
+    <main>
+  <!-- HOME -->
+  <section class="tab-content home" style="display:block;">
+    <div class="card-grid">
+      <div class="card green">
+        <h3>Claim XP</h3>
+        <p>Daily XP bonus</p>
+        <button>Claim</button>
+      </div>
+      <div class="card dark">
+        <h3>Buy Token</h3>
+        <p>Pre-launch $WARP</p>
+        <button>Buy Now</button>
+      </div>
+      <div class="card dark">
+        <h3>🔥 87 XP</h3>
+        <p>5-day streak</p>
+        <button class="info-btn green" onclick="toggleXpInfo()">[?] About XP & WAI</button>
+      </div>
+      <div class="card purple">
+        <h3>💎 Premium Tools</h3>
+        <div class="btn-row">
+          <button>Claim another address</button>
+          <button>Track random wallet</button>
         </div>
       </div>
-    </section>
+      <div class="card full journey">
+        <h3>🎯 Your XP Journey</h3>
+        <p>Level 2 → Next Level: 100 XP</p>
+        <div class="xp-bar">
+          <div class="xp-fill" style="width: 87%;"></div>
+        </div>
+        <small>87 / 100 XP</small>
+      </div>
+    </div>
+  </section>
+
+  <!-- TRACK -->
+  <section class="tab-content" style="display:none;">
+    <div class="hero">
+      <h2 style="font-size:1.2rem;">📈 Onchain Tracker</h2>
+      <p class="subtitle">Track your own wallet activity</p>
+    </div>
+    <div class="card-grid">
+      <div class="card blue">
+        <h3>Latest Activity</h3>
+        <p>Ex Bought Token on Zora</p>
+        <small>+ $5.23 Win</small>
+      </div>
+
+      <div class="card dark">
+        <h3>Tokens Minted</h3>
+        <p>23 st</p>
+      </div>
+
+      <div class="card dark">
+        <h3>ETH Moved</h3>
+        <p>1.65 ETH total</p>
+      </div>
+
+      <div class="card dark">
+        <h3>Gas Spent</h3>
+        <p>0.14 ETH (~$42)</p>
+      </div>
+
+      <div class="card dark">
+        <h3>Connected dApps</h3>
+        <ul>
+          <li>Zora</li>
+          <li>OpenSea</li>
+          <li>Base</li>
+        </ul>
+      </div>
+
+      <div class="card dark">
+        <h3>🎨 NFT Mint History</h3>
+        <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
+          <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
+          <li><strong>MintQuest #7</strong> – Free – Base</li>
+          <li><strong>OnchainSticker</strong> – 0.004 ETH – Optimism</li>
+        </ul>
+        <button style="margin-top:0.5rem;">View Full History</button>
+      </div>
+    </div>
+  </section>
+
 
     <!-- TRACK -->
 <section class="tab-content" style="display:none;">
@@ -120,7 +169,7 @@
       </ul>
     </div>
 
-    <div class="card full dark">
+    <div class="card dark">
       <h3>🎨 NFT Mint History</h3>
       <ul style="text-align:left; padding-left:1rem; font-size:0.75rem; line-height:1.5;">
         <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
@@ -129,6 +178,10 @@
       </ul>
       <button style="margin-top:0.5rem;">View Full History</button>
     </div>
+
+  </div>
+</section>
+
 
     <!-- Premium Followed Wallets -->
     <div class="card full dark">
